# leet-info-graph-gpt-5.1-codex-mini-v3

./: README.md  docker-compose.yml  goals.md  plan.summary.md  start.sh  stop.sh
.leet/: .todos.json  data.txt
.leet/command_queue/pending/: 1770963548889_e7394227-7c8c-4c42-96c2-bd80856c3c5f.json
.leet/command_queue/processed/: 1770948174726_1d994296-6791-443a-b824-520fcae0b78e.json  (+3 more)
.leet/plans/: planning_trace.jsonl
backend/: README.md  pyproject.toml  start.sh  stop.sh  uvicorn_runner.py
backend/src/infograph/: __init__.py
backend/src/infograph/core/: __init__.py
backend/src/infograph/core/schemas/: __init__.py  auth.py  infographic.py  message.py  research_session.py  source.py  user.py
backend/src/infograph/services/: __init__.py  auth_service.py  infographic_service.py
backend/src/infograph/stores/: __init__.py  abstract_infographic_store.py  abstract_message_store.py  abstract_session_store.py  abstract_source_store.py  abstract_user_store.py  in_memory_user_store.py
backend/src/infograph/stores/duckdb/: __init__.py  base.py  client.py  duckdb_client.py  infographic_store_duckdb.py  message_store_duckdb.py  session_store_duckdb.py  source_store_duckdb.py  user_store_duckdb.py
backend/src/infograph/svc/: __init__.py  api_router_base.py  api_service.py  main.py
backend/src/infograph/svc/api/v1/: api.py
backend/src/infograph/svc/api/v1/routers/: __init__.py  auth_router.py  health_router.py  infographic_router.py  session_router.py
backend/src/jose/: __init__.py  jwt.py
backend/tests/: conftest.py  test_auth_google.py  test_auth_router.py  test_duckdb_stores.py  test_health_router.py  test_session_router.py
data/duckdb/: infograph.db
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  (+1 more)
(+622 files in other folders)
