[project]
name = "infograph-backend"
version = "0.1.0"
description = "Backend service for Research Infograph Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.23.0",
    "click>=8.1.7",
    "pydantic>=1.10.10"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "tomli>=2.0"]
build-backend = "setuptools.build_meta"
