[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infograph"
version = "0.1.0"
description = "Research Infograph Assistant backend service"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "duckdb>=0.9.1",
    "python-jose[cryptography]>=3.0.1",
    "google-auth>=2.23.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
start = "infograph.svc.main:main"

[tool.pytest]
testpaths = ["tests"]
